bug: fix notebook spacing

--- a/src/components/NoteBook/NoteBook.css
+++ b/src/components/NoteBook/NoteBook.css
@@ -17,9 +17,10 @@
 }
 
 .experience-bullet-points-overall{
-    margin-top: -10px; 
+    /* margin-top: -10px;  */
 
 }
+
 
 
 .experience-bullet-points-overall li{
@@ -52,6 +53,7 @@
 
 
 .page h1{
+  /* padding-top: 5%; */
     font-size: 20px;
     text-align: center;
     padding-right: 40px;
@@ -138,6 +140,7 @@
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     white-space: pre-wrap;
+    height: 100%;
 }
 
 
@@ -147,9 +150,11 @@
 }
 
 .spine {
-  width: 10px;
+  display: flex;
+  width: 15px;
+  height: 100%;
   background-color: #c89f7f;
-  
+
 }
 
 @media (max-width: 768px) {
